# pioneer-words-per-card

./: README.md  pyproject.toml  requirements.txt  results.txt  words_per_card.py
data/db/: README.md
decks/: 5c Fires of Invention.txt  Abzan Greasefang.txt  Azorius Control.txt  Bant Spirits.txt  Boros Heroic.txt  Hidden Strings.txt  Izzet Phoenix.txt  Mono-Blue Spirits.txt  Mono-Red Aggro.txt  Mono-White Humans.txt  Nykthos Ramp.txt  Rakdos Midrange.txt  Rakdos Sacrifice.txt  gw_enchantments_decklist.txt
